# evonith_dailylive_datafeed

./: .coverage  .env  .gitignore  LICENSE  main.py  output.txt  pyproject.toml  readme.md  requirements.txt  testfile.txt  variables.txt
.github/workflows/: deploy.yml  test-on-main.yml
config/: config.yaml  field_mappings.yaml  logging.yaml  logging_debug.yaml
db/: run_metadata.db
logs/: pipeline.log.1  pipeline.log.2  pipeline.log.3
output/: test.txt
src/: main.py
src/pipeline/: api_client.py  bf2_rename_map.py  data_cleaner.py  influx_writer.py  run_tracker.py  utils.py  write_to_file.py
test/: __init__.py  test_api_client.py  test_bf2_rename_map.py  test_data_cleaner.py  test_full_pipeline.py  test_influx_writer.py  test_main.py  test_run_tracker.py  test_utils.py
test/pipeline/: test_data_writer.py
